# CapitalOneAssistant

./: .env  pyproject.toml
backend/: analyzer.py  main.py  test.py
data/: accounts.csv  accounts.json  transactions.csv  transactions.json
frontend/: app.py
scripts/: generate_data.py  get_recent_transactions.py
